# 2020-1-OSSP2-CMD-7

./: LICENSE  README.md
FaceGame/: .Makefile.swp  CMakeLists.txt  Makefile  audio.c
FaceGame/src/: FaceTracker.cpp  FaceTracker.d
FaceTracker/: Makefile
FaceTracker/src/exe/: face_tracker.cc  face_tracker.d
__MACOSX/FaceGame/: ._Makefile
opencvtest/: CMakeCache.txt  CMakeLists.txt  Info.plist  LaneDetection1  Makefile  cmake_install.cmake  drawLandmarks.hpp  facialLandmarkDetection.cpp  renderFace.hpp
